@@ -2,7 +2,6 @@ package com.tia.lms_backend.service;
 
 import com.tia.lms_backend.dto.EnrollmentCourseContentDto;
 import com.tia.lms_backend.dto.EnrollmentDto;
-import com.tia.lms_backend.dto.UserCourseContentDto;
 import com.tia.lms_backend.dto.request.CreateEnrollmentRequest;
 import com.tia.lms_backend.dto.response.EnrollmentResponseDto;
 import com.tia.lms_backend.exception.EntityAlreadyExistsException;
@@ -13,10 +12,7 @@ import com.tia.lms_backend.mapper.EnrollmentMapper;
 import com.tia.lms_backend.mapper.UserMapper;
 import com.tia.lms_backend.model.*;
 import com.tia.lms_backend.model.enums.Status;
-import com.tia.lms_backend.repository.CourseRepository;
-import com.tia.lms_backend.repository.EnrollmentRepository;
-import com.tia.lms_backend.repository.UserCourseContentRepository;
-import com.tia.lms_backend.repository.UserRepository;
+import com.tia.lms_backend.repository.*;
 import lombok.extern.log4j.Log4j2;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -29,6 +25,7 @@ import java.util.stream.Collectors;
 @Service
 @Log4j2
 public class EnrollmentService {
+
     private final EnrollmentMapper enrollmentMapper;
     private final EnrollmentRepository enrollmentRepository;
     private final UserRepository userRepository;
@@ -36,10 +33,18 @@ public class EnrollmentService {
     private final UserCourseContentRepository userCourseContentRepository;
     private final UserMapper userMapper;
     private final CourseMapper courseMapper;
+    private final TeamRepository teamRepository;
+    private final DepartmentRepository departmentRepository;
 
     public EnrollmentService(EnrollmentMapper enrollmentMapper,
                              EnrollmentRepository enrollmentRepository,
-                             UserRepository userRepository, CourseRepository courseRepository, UserCourseContentRepository userCourseContentRepository, UserMapper userMapper, CourseMapper courseMapper) {
+                             UserRepository userRepository,
+                             CourseRepository courseRepository,
+                             UserCourseContentRepository userCourseContentRepository,
+                             UserMapper userMapper,
+                             CourseMapper courseMapper,
+                             TeamRepository teamRepository,
+                             DepartmentRepository departmentRepository) {
         this.enrollmentMapper = enrollmentMapper;
         this.enrollmentRepository = enrollmentRepository;
         this.userRepository = userRepository;
@@ -47,6 +52,8 @@ public class EnrollmentService {
         this.userCourseContentRepository = userCourseContentRepository;
         this.userMapper = userMapper;
         this.courseMapper = courseMapper;
+        this.teamRepository = teamRepository;
+        this.departmentRepository = departmentRepository;
     }
 
     public EnrollmentDto createEnrollment(CreateEnrollmentRequest request) {
@@ -54,189 +61,98 @@ public class EnrollmentService {
 
         Course course = courseRepository.findById(UUID.fromString(request.getCourseId()))
                 .orElseThrow(() -> new EntityNotFoundException("Course not found with id: " + request.getCourseId()));
-
         User user = userRepository.findById(UUID.fromString(request.getUserId()))
                 .orElseThrow(() -> new EntityNotFoundException("User not found with id: " + request.getUserId()));
 
         if (enrollmentRepository.existsByUserAndCourse(user, course)) {
-            log.error("Enrollment already exists for user: {} in course: {}", request.getUserId(), request.getCourseId());
             throw new EntityAlreadyExistsException("Enrollment already exists for this user in the course");
         }
 
-        boolean isCourseMandatory = course.isMandatory();
-
-        if (isCourseMandatory && request.getDeadLineDate() == null) {
+        if (course.isMandatory() && request.getDeadLineDate() == null) {
             throw new GeneralException("Mandatory course must have a deadline date");
         }
 
-        if (!isCourseMandatory) {
+        if (!course.isMandatory()) {
             request.setDeadLineDate(null);
         }
 
-        Status enrollmentStatus;
-        if (request.getStartDate() != null && !request.getStartDate().isAfter(LocalDateTime.now())) {
-            enrollmentStatus = Status.IN_PROGRESS;
-        } else {
-            enrollmentStatus = Status.ASSIGNED;
-        }
+        Status status = (request.getStartDate() != null && !request.getStartDate().isAfter(LocalDateTime.now()))
+                ? Status.IN_PROGRESS : Status.ASSIGNED;
 
         Enrollment enrollment = Enrollment.builder()
                 .user(user)
                 .course(course)
                 .startDate(request.getStartDate())
                 .deadlineDate(request.getDeadLineDate())
-                .status(enrollmentStatus)
+                .status(status)
                 .build();
 
-        Enrollment savedEnrollment = enrollmentRepository.save(enrollment);
-        log.info("Enrollment created successfully: {}", savedEnrollment);
+        Enrollment saved = enrollmentRepository.save(enrollment);
 
-        List<CourseContent> courseContents = course.getCourseContents();
-        if (courseContents == null || courseContents.isEmpty()) {
-            log.warn("No course contents found for course: {}", course.getId());
-        } else {
-            List<UserCourseContent> userCourseContents = courseContents.stream()
+        if (course.getCourseContents() != null && !course.getCourseContents().isEmpty()) {
+            List<UserCourseContent> userCourseContents = course.getCourseContents().stream()
                     .map(content -> UserCourseContent.builder()
                             .courseContent(content)
                             .user(user)
-                            .status(enrollmentStatus)
+                            .status(status)
                             .build())
                     .collect(Collectors.toList());
-
             userCourseContentRepository.saveAll(userCourseContents);
-            log.info("Created UserCourseContent records for user: {}", user.getId());
         }
 
-        return enrollmentMapper.entityToDto(savedEnrollment);
+        return enrollmentMapper.entityToDto(saved);
     }
 
     @Transactional
-    public void userCourseContentStatusToComplete(UUID userId, UUID userCourseContentId) {
-        log.info("Updating UserCourseContent status to COMPLETED for user: {} and content: {}", userId, userCourseContentId);
-        updateUserCourseContentStatus(userId, userCourseContentId, Status.COMPLETED);
+    public void userCourseContentStatusToComplete(UUID userId, UUID contentId) {
+        updateUserCourseContentStatus(userId, contentId, Status.COMPLETED);
     }
 
     @Transactional
-    public void userCourseContentStatusToInProgress(UUID userId, UUID userCourseContentId) {
-        log.info("Updating UserCourseContent status to IN_PROGRESS for user: {} and content: {}", userId, userCourseContentId);
-        updateUserCourseContentStatus(userId, userCourseContentId, Status.IN_PROGRESS);
+    public void userCourseContentStatusToInProgress(UUID userId, UUID contentId) {
+        updateUserCourseContentStatus(userId, contentId, Status.IN_PROGRESS);
     }
 
     @Transactional
-    protected void updateUserCourseContentStatus(UUID userId, UUID userCourseContentId, Status newStatus) {
+    protected void updateUserCourseContentStatus(UUID userId, UUID contentId, Status newStatus) {
         User user = userRepository.findById(userId)
-                .orElseThrow(() -> new EntityNotFoundException("User not found with id: " + userId));
-
-        UserCourseContent userCourseContent = userCourseContentRepository.findById(userCourseContentId)
-                .orElseThrow(() -> new EntityNotFoundException("UserCourseContent not found with id: " + userCourseContentId));
-
-        if (!userCourseContent.getUser().getId().equals(user.getId())) {
-            throw new GeneralException("This UserCourseContent does not belong to the given user");
+                .orElseThrow(() -> new EntityNotFoundException("User not found"));
+        UserCourseContent ucc = userCourseContentRepository.findById(contentId)
+                .orElseThrow(() -> new EntityNotFoundException("UserCourseContent not found"));
+        if (!ucc.getUser().getId().equals(userId)) {
+            throw new GeneralException("UserCourseContent does not belong to this user");
         }
 
-        userCourseContent.setStatus(newStatus);
-        userCourseContentRepository.save(userCourseContent);
+        ucc.setStatus(newStatus);
+        userCourseContentRepository.save(ucc);
 
-        Course course = userCourseContent.getCourseContent().getCourse();
-
+        Course course = ucc.getCourseContent().getCourse();
         Enrollment enrollment = enrollmentRepository.findByUserAndCourse(user, course)
-                .orElseThrow(() -> new EntityNotFoundException(
-                        "Enrollment not found for user and course: userId=" + userId + ", courseId=" + course.getId()));
+                .orElseThrow(() -> new EntityNotFoundException("Enrollment not found for user and course"));
 
-        List<UserCourseContent> allContents = userCourseContentRepository.findAllByUserAndCourse(user.getId(), course.getId());
-
-        boolean allCompleted = allContents.stream().allMatch(ucc -> ucc.getStatus() == Status.COMPLETED);
+        List<UserCourseContent> allContents = userCourseContentRepository.findAllByUserAndCourse(userId, course.getId());
+        boolean allCompleted = allContents.stream().allMatch(c -> c.getStatus() == Status.COMPLETED);
 
         if (newStatus == Status.COMPLETED && allCompleted) {
-
             if (enrollment.getStatus() != Status.COMPLETED) {
                 enrollment.setStatus(Status.COMPLETED);
                 enrollment.setCompletionDate(LocalDateTime.now());
                 enrollmentRepository.save(enrollment);
-                log.info("All contents completed, enrollment marked as COMPLETED for user: {}", userId);
             }
         } else if (newStatus == Status.IN_PROGRESS && enrollment.getStatus() == Status.COMPLETED && !allCompleted) {
             enrollment.setStatus(Status.IN_PROGRESS);
             enrollment.setCompletionDate(null);
             enrollmentRepository.save(enrollment);
-            log.info("A content was reopened, enrollment status reverted to IN_PROGRESS for user: {}", userId);
         }
     }
 
-
-    private Enrollment saveEntity(Enrollment enrollment) {
-        try {
-            if (enrollment == null) {
-                log.error("enrollment entity is invalid");
-                throw new EntityNotFoundException("enrollment entity is invalid");
-            }
-
-            log.info("Saving enrollment: {}", enrollment);
-            return enrollmentRepository.save(enrollment);
-
-        } catch (RuntimeException e) {
-            throw e;
-        } catch (Exception e) {
-            log.error("Unexpected error saving enrollment: {}", enrollment, e);
-            throw new GeneralException("Error saving enrollment", e);
-        }
-    }
-
-    public List<EnrollmentDto> getAll() {
-        log.info("Fetching all enrollments");
-        List<Enrollment> enrollments;
-        try {
-            enrollments = enrollmentRepository.findAll();
-
-        } catch (Exception e) {
-            log.error("Error fetching enrollments", e);
-            throw new GeneralException("Error fetching enrollments", e);
-        }
-        log.info("Enrollments fetched successfully: {}", enrollments);
-        return enrollments.stream()
-                .map(enrollmentMapper::entityToDto)
-                .toList();
-    }
-
-
-    public List<EnrollmentResponseDto> getByUserId(UUID userId) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new EntityNotFoundException("User not found with id: " + userId));
-
-        List<Enrollment> enrollments = enrollmentRepository.findByUser(user);
-
-        return enrollments.stream().map(enrollment -> {
-            List<UserCourseContent> userCourseContents = userCourseContentRepository
-                    .findAllByUserAndCourse(userId, enrollment.getCourse().getId());
-
-
-            List<EnrollmentCourseContentDto> enrollmentCourseContentDtos = userCourseContents.stream()
-                    .map(enrollmentMapper::userCourseContentToEnrollmentCourseContentDto)
-                    .toList();
-            return EnrollmentResponseDto.builder()
-                    .id(enrollment.getId())
-                    .user(userMapper.entityToDto(enrollment.getUser()))
-                    .course(courseMapper.entityToEnrollmentCourseDto(enrollment.getCourse()))
-                    .startDate(enrollment.getStartDate())
-                    .deadlineDate(enrollment.getDeadlineDate())
-                    .completionDate(enrollment.getCompletionDate())
-                    .status(enrollment.getStatus())
-                    .userCourseContents(enrollmentCourseContentDtos)
-                    .build();
-        }).collect(Collectors.toList());
-    }
-
-    public EnrollmentResponseDto getById(UUID id) {
-        Enrollment enrollment = enrollmentRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Enrollment not found with id: " + id));
-
-        // UserCourseContents
-        List<UserCourseContent> userCourseContents = userCourseContentRepository
-                .findAllByUserAndCourse(enrollment.getUser().getId(), enrollment.getCourse().getId());
-
-        List<EnrollmentCourseContentDto> enrollmentCourseContentDtos = userCourseContents.stream()
+    private EnrollmentResponseDto mapEnrollmentCourseContents(Enrollment enrollment, List<UserCourseContent> uccList, double totalRate) {
+        long completed = uccList.stream().filter(u -> u.getStatus() == Status.COMPLETED).count();
+        double courseRate = uccList.isEmpty() ? 0.0 : (double) completed / uccList.size() * 100.0;
+        List<EnrollmentCourseContentDto> dtos = uccList.stream()
                 .map(enrollmentMapper::userCourseContentToEnrollmentCourseContentDto)
-                .toList();
+                .collect(Collectors.toList());
+
         return EnrollmentResponseDto.builder()
                 .id(enrollment.getId())
                 .user(userMapper.entityToDto(enrollment.getUser()))
@@ -245,7 +161,65 @@ public class EnrollmentService {
                 .deadlineDate(enrollment.getDeadlineDate())
                 .completionDate(enrollment.getCompletionDate())
                 .status(enrollment.getStatus())
-                .userCourseContents(enrollmentCourseContentDtos)
+                .userCourseContents(dtos)
+                .courseCompletionRate(courseRate)
+                .totalCompletionRate(totalRate)
                 .build();
+    }
+
+    private List<EnrollmentResponseDto> resolveEnrollments(List<Enrollment> enrollments) {
+        long totalContents = 0, totalCompleted = 0;
+
+        List<List<UserCourseContent>> allContents = enrollments.stream()
+                .map(e -> userCourseContentRepository.findAllByUserAndCourse(
+                        e.getUser().getId(), e.getCourse().getId()))
+                .toList();
+
+        for (List<UserCourseContent> list : allContents) {
+            totalContents += list.size();
+            totalCompleted += list.stream().filter(u -> u.getStatus() == Status.COMPLETED).count();
+        }
+
+        double totalRate = totalContents == 0 ? 0.0 : (double) totalCompleted / totalContents * 100.0;
+
+        return enrollments.stream().map(e -> {
+            List<UserCourseContent> ucc = userCourseContentRepository.findAllByUserAndCourse(
+                    e.getUser().getId(), e.getCourse().getId());
+            return mapEnrollmentCourseContents(e, ucc, totalRate);
+        }).toList();
+    }
+
+    public List<EnrollmentResponseDto> getAll() {
+        return resolveEnrollments(enrollmentRepository.findAll());
+    }
+
+    public EnrollmentResponseDto getById(UUID id) {
+        Enrollment e = enrollmentRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("Enrollment not found"));
+        List<UserCourseContent> ucc = userCourseContentRepository.findAllByUserAndCourse(
+                e.getUser().getId(), e.getCourse().getId());
+        long completed = ucc.stream().filter(u -> u.getStatus() == Status.COMPLETED).count();
+        double total = ucc.isEmpty() ? 0.0 : (double) completed / ucc.size() * 100.0;
+        return mapEnrollmentCourseContents(e, ucc, total);
+    }
+
+    public List<EnrollmentResponseDto> getByUserId(UUID userId) {
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new EntityNotFoundException("User not found"));
+        return resolveEnrollments(enrollmentRepository.findByUser(user));
+    }
+
+    public List<EnrollmentResponseDto> getByTeamId(UUID teamId) {
+        Team team = teamRepository.findById(teamId)
+                .orElseThrow(() -> new EntityNotFoundException("Team not found"));
+        List<User> users = userRepository.findAllByTeam(team);
+        return resolveEnrollments(enrollmentRepository.findAllByUserIn(users));
+    }
+
+    public List<EnrollmentResponseDto> getByDepartmentId(UUID departmentId) {
+        Department department = departmentRepository.findById(departmentId)
+                .orElseThrow(() -> new EntityNotFoundException("Department not found"));
+        List<User> users = userRepository.findAllByDepartment(department);
+        return resolveEnrollments(enrollmentRepository.findAllByUserIn(users));
     }
 }
